# stlbfgs

./: CMakeLists.txt  README.md  helloworld.cpp  linesearch.cpp  linesearch.h  linesearch.md  stlbfgs.cpp  stlbfgs.h
.github/workflows/: continuous.yml  nightly.yml
sandpit/: CMakeLists.txt
sandpit/helloworld/: CMakeLists.txt  helloworld.cpp
sandpit/untangle/: CMakeLists.txt  untangle.cpp
tests/: CMakeLists.txt  test-beale.cpp  test-biggsexp6.cpp  test-box3d.cpp  test-brown-dennis.cpp  test-brown.cpp  test-gaussian.cpp  test-gulf-rnd.cpp  test-helicalvalley.cpp  test-linesearch.cpp  test-powell.cpp  test-quadratic.cpp  test-rosenbrock.cpp  test-stlbfgs.cpp  test-untangle.cpp  test-wood.cpp
